Responsive background team section to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ a:hover {
 
 .grey-box {
     background-color: #F5F5F5;
+    height: auto;
 }
 
 .text-l {
